[package]
name = "mydhcp"
version = "0.1.0"
edition = "2024"
description = "A minimal DHCP client implemented in Rust."
license = "MIT"
repository = "https://github.com/XFajk/mydhcp"
homepage = "https://github.com/XFajk/mydhcp"
documentation = "https://github.com/XFajk/mydhcp#readme"
readme = "README.md"
keywords = ["dhcp", "networking", "client", "rust"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
ctrlc = "3.4.7"
env_logger = "0.11.8"
etherparse = "0.18.0"
libc = "0.2.172"
log = "0.4.27"
mac_address = "1.1.8"
pcap = "2.2.0"
thiserror = "2.0.12"
